--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "travel",
   "version": "1.0.0",
-  "description": "travel",
+  "description": "lencx・游记",
   "author": "lencx <cxin1314@gmail.com>",
   "scripts": {
     "dev": "yarn init:json && vite",
