--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: '14'
       - run: yarn
+      - run: yarn init:json
       - run: yarn build
 
       - name: Deploy
