--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "lencx <cxin1314@gmail.com>",
   "scripts": {
     "dev": "yarn init:json && vite",
-    "build": "yarn init:json && tsc && vite build",
+    "build": "tsc && vite build",
     "init:json": "node scripts/init.js",
     "type-check": "tsc",
     "lint": "eslint . --ext ts,tsx,js,jsx",
@@ -50,7 +50,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "wicg-inert": "^3.1.1"
   },
   "husky": {
     "hooks": {
