--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,11 @@ jobs:
       - run: yarn
       - run: yarn init:json
       - run: yarn build
+      - run: yarn cp
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./
-          exclude_assets: '.github,src,node_modules,scripts'
+          publish_dir: ./dist
           force_orphan: true
