--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "yarn init:json && vite",
     "build": "tsc && vite build",
     "init:json": "node scripts/init.js",
+    "cp": "node scripts/cp.js",
     "type-check": "tsc",
     "lint": "eslint . --ext ts,tsx,js,jsx",
     "lint:fix": "yarn lint --fix"
@@ -35,6 +36,7 @@
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
     "sass": "^1.34.0",
+    "shelljs": "^0.8.4",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "typescript": "^4.4.2",
